--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.4.0",
     "react": "^18.1.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
